--- a/ssms/src/main/resources/templates/course/classCourse.html
+++ b/ssms/src/main/resources/templates/course/classCourse.html
@@ -155,13 +155,11 @@
                     </div>
                     <div id="weekNumDiv" class="layui-inline" style="padding-left: 20px;display:none;">
                         <div class="layui-inline">
-                            <input name="weekNum" id="weekNumId" placeholder="第几周课程" type="number" value="1"
-                                   style="width: 135px" class="layui-input"/>
-                        </div>
+                            <label>周数:</label>
+                         </div>
                         <div class="layui-inline">
-                            <button id="btnAdd" class="layui-btn icon-btn">
-                                <i class="layui-icon">&#xe654;</i>添加
-                            </button>
+                            <input name="weekNum" id="weekNumId" placeholder="第几周课程" type="number" value="1"
+                                   style="width: 170px" maxlength="3" class="layui-input"/>
                         </div>
                     </div>
                 </div>
@@ -231,37 +229,6 @@
             }
         });
 
-        //添加课程表
-        $('#btnAdd').click(function () {
-            saveOrUpdateTimeTable();
-        });
-
-        //删除课程表
-        $('#btnDel').click(function () {
-            var id = $('#timeTableId').val();
-            $.ajax({
-                url: '/course/timeTable/'+id,
-                type: 'DELETE',
-                success: function (data) {
-                    layer.closeAll('loading');
-                    if (data.code == 200) {
-                        layer.msg('操作成功', {
-                            icon: 1
-                        });
-                    }
-                    if (data.code == 500) {
-                        layer.msg('操作失败', {
-                            icon: 2
-                        });
-                    }
-                    // 关闭当前弹出层
-                    layer.close(index);
-                    //获取课程表
-                    searchTimeTableList();
-                }
-            });
-            return false;
-        });
         //新增或修改课程表
         function saveOrUpdateTimeTable(e) {
             var collegeId = $('#collegeId option:selected').val();
@@ -271,36 +238,32 @@
             var schoolYear = $('#schoolYearId option:selected').val();
             var semester = $('#semesterId option:selected').val();
             if (collegeId != "" && subjectId != "" && classId != "" && gradeId != "" && schoolYear != "" && semester != "") {
-                //加载课程下拉框
-                renderCourseList(collegeId, subjectId, classId, gradeId, schoolYear, semester);
-                //加载教师下拉框
-                renderTeacherList(collegeId, subjectId);
-                //表单重置
-                $('#timeTableForm')[0].reset();
-                $('#dayOfWeek').val('');
-                $('#timeTableForm input').removeAttr("readonly");
-                $('#timeTableForm select').attr("disabled", false);
-                $('#btnDel').hide();
-                $('#btnSubmit').show();
-                form.render();
-                var title = '添加课程';
-                if (e != null && e.name != null &&  e.name != "") {
-                    //修改
-                    title = '修改课程';
-                    reshowCourse(collegeId, subjectId, classId, gradeId, schoolYear, semester, e, false)
+                if (e != null && e.name != null && e.name != "") {
+                    //加载课程下拉框
+                    renderCourseList(collegeId, subjectId, classId, gradeId, schoolYear, semester);
+                    //加载教师下拉框
+                    renderTeacherList(collegeId, subjectId);
+                    //表单重置
+                    $('#timeTableForm')[0].reset();
+                    $('#dayOfWeek').val('');
+                    form.render();
+                    reshowCourse(collegeId, subjectId, classId, gradeId, schoolYear, semester, e, true)
+                    //展示弹窗
+                    index = layer.open({
+                        type: 1,
+                        skin: 'layui-layer-molv',
+                        title: '查看课程',
+                        area: ['600px', '470px'],
+                        content: $('#timeTableDiv')
+                    });
+                } else {
+                    layer.msg("当前无课程", {icon: 6})
                 }
-                //展示弹窗
-                index = layer.open({
-                    type: 1,
-                    skin: 'layui-layer-molv',
-                    title: title,
-                    area: ['600px', '470px'],
-                    content: $('#timeTableDiv')
-                });
             } else {
-                layer.msg("必须选择具体专业年级和学期信息", {icon: 4})
+                layer.msg("必须选择具体学年和学期信息", {icon: 4})
             }
         }
+
         //回显课程信息
         function reshowCourse(collegeId, subjectId, classId, gradeId, schoolYear, semester, e, isReadonly) {
             var weekNum = $('#weekNumId').val();
@@ -373,7 +336,7 @@
                                 $('#timeTableForm select').attr("disabled", true);
                                 $('#btnSubmit').hide();
                                 $('#btnDel').hide();
-                            }else {
+                            } else {
                                 $('#btnDel').show();
                             }
                             form.render('select');
@@ -444,37 +407,19 @@
         //加载学院下拉框
         collegeSelect.renderCollegeList();
 
-        //选择学院触发事件
-        form.on('select(collegeId)', function (data) {
-            if ($("#collegeId option:selected").val() != "") {
-                $('#subjectDiv').show();
-                collegeSelect.renderSubjectList(data.value);
-                form.render('select');
+        //教师/学生登录回显
+        var collegeInfoCollegeId = '${collegeInfo.collegeId}';
+        if (collegeInfoCollegeId != undefined && collegeInfoCollegeId != '' && collegeInfoCollegeId != '{}') {
+            var subjectId = '${collegeInfo.subjectId}';
+            var classId = '${collegeInfo.classId}';
+            var gradeId = '${collegeInfo.gradeId}';
+            if (classId == '' || gradeId == '') {
+                collegeSelect.reshowAll(collegeInfoCollegeId, subjectId, null, null, null, null, true);
             } else {
-                $('#subjectDiv').hide();
+                collegeSelect.reshowAll(collegeInfoCollegeId, subjectId, classId, gradeId, null, null, true);
             }
-            $('#classDiv').hide();
-            $('#gradeDiv').hide();
-            $('#schoolYearDiv').hide();
-            $('#semesterDiv').hide();
-            $('#weekNumDiv').hide();
-            $('#btnAdd').hide();
-        });
-        //选择专业触发事件
-        form.on('select(subjectId)', function (data) {
-            if ($("#subjectId option:selected").val() != "") {
-                collegeSelect.renderClassList(data.value);
-                form.render('select');
-                $('#classDiv').show();
-            } else {
-                $('#classDiv').hide();
-            }
-            $('#gradeDiv').hide();
-            $('#schoolYearDiv').hide();
-            $('#semesterDiv').hide();
-            $('#weekNumDiv').hide();
-            $('#btnAdd').hide();
-        });
+        }
+
         //选择班级触发事件
         form.on('select(classId)', function (data) {
             if (data.value != "") {
@@ -487,7 +432,6 @@
             $('#schoolYearDiv').hide();
             $('#semesterDiv').hide();
             $('#weekNumDiv').hide();
-            $('#btnAdd').hide();
         });
         //选择年级触发事件
         form.on('select(gradeId)', function (data) {
@@ -503,7 +447,6 @@
             }
             $('#semesterDiv').hide();
             $('#weekNumDiv').hide();
-            $('#btnAdd').hide();
         });
         //选择学年触发事件
         form.on('select(schoolYearId)', function (data) {
@@ -513,17 +456,14 @@
                 $('#semesterDiv').hide();
             }
             $('#weekNumDiv').hide();
-            $('#btnAdd').hide();
         });
         //选择学期触发事件
         form.on('select(semesterId)', function (data) {
             if ($("#semesterDiv option:selected").val() != "") {
                 $('#weekNumDiv').show();
-                $('#btnAdd').show();
                 searchTimeTableList();
             } else {
                 $('#weekNumDiv').hide();
-                $('#btnAdd').hide();
             }
         });
 
@@ -576,70 +516,7 @@
                 }
             });
         }
-
-        //表单提交事件
-        form.on('submit(btnSubmit)', function (data) {
-            layer.load(2);
-            var field = data.field;
-            //获取表单信息
-            var startLesson = field.startLesson;
-            var endLesson = field.endLesson;
-            var id = field.id;
-            var startWeekNum = field.startWeekNum;
-            var endWeekNum = field.endWeekNum;
-            var address = field.address;
-            var teacherId = $("#teacherId option:selected").val();
-            var teacherName = $("#teacherId option:selected").text();
-            var dayOfWeek = $("#dayOfWeek option:selected").val();
-            var courseId = $("#courseNameId option:selected").val();
-            var param = JSON.stringify({
-                "id": id,
-                "courseId": courseId,
-                "teacherId": teacherId,
-                "teacherName": teacherName,
-                "dayOfWeek": dayOfWeek - 1,
-                "startWeekNum": startWeekNum,
-                "endWeekNum": endWeekNum,
-                "startLesson": startLesson,
-                "endLesson": endLesson,
-                "address": address
-            });
-            var url;
-            var method;
-            if (id != '' && id != null) {
-                url = '/course/timeTable';
-                method = 'PUT';
-            } else {
-                url = '/course/timeTable';
-                method = 'POST';
-            }
-            $.ajax({
-                url: url,
-                type: method,
-                data: param,
-                contentType: 'application/json;charset=UTF-8',
-                success: function (data) {
-                    layer.closeAll('loading');
-                    if (data.code == 200) {
-                        layer.msg('操作成功', {
-                            icon: 1
-                        });
-                    }
-                    if (data.code == 500) {
-                        layer.msg('操作失败', {
-                            icon: 2
-                        });
-                    }
-                    // 关闭当前弹出层
-                    layer.close(index);
-                    //获取课程表
-                    searchTimeTableList();
-                },
-            });
-            return false;
-        });
     });
-
 </script>
 </body>
 <div id="timeTableDiv" style="display: none;" lay-filter="timeTableDiv">
@@ -713,9 +590,7 @@
             </div>
         </div>
         <div class="layui-form-item text-right">
-            <button class="layui-btn layui-btn-primary closeDialog" type="button">取消</button>
-            <button class="layui-btn" id="btnDel" lay-filter="btnDel">删除</button>
-            <button class="layui-btn" id="btnSubmit" lay-filter="btnSubmit" lay-submit>保存</button>
+            <button class="layui-btn closeDialog" type="button">确定</button>
         </div>
     </form>
 </div>
