--- a/ssms/src/main/resources/templates/system/userForm.html
+++ b/ssms/src/main/resources/templates/system/userForm.html
@@ -45,12 +45,55 @@
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">角色</label>
-        <div class="layui-input-block">
-            <select name="roleId" xm-select="roleId" lay-verify="required">
+        <div class="layui-input-inline">
+            <select name="roleId" id="roleId" lay-filter="roleId" lay-verify="required">
+                <option value="">请选择角色</option>
                 <% for(role in roles) { %>
                 <option value="${role.roleId}">${role.roleName}</option>
                 <% } %>
             </select>
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <div id="collegeDiv" style="display: none">
+            <label class="layui-form-label">学院</label>
+            <div class="layui-input-inline">
+                <select id="collegeId" name="collegeId" lay-verify="teacherRequired"
+                        lay-filter="collegeId">
+                    <option value="">请选择学院</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <div id="subjectDiv" style="display: none">
+            <label class="layui-form-label">专业</label>
+            <div class="layui-input-inline">
+                <select id="subjectId" name="subjectId" lay-verify="teacherRequired"
+                        lay-filter="subjectId">
+                    <option value="">请选择专业</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <div id="classDiv" style="display: none">
+            <label class="layui-form-label">班级</label>
+            <div class="layui-input-inline">
+                <select id="classId" name="classId" lay-verify="studentRequired" lay-filter="classId">
+                    <option value="">请选择班级</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <div id="gradeDiv" style="display: none">
+            <label class="layui-form-label">年级</label>
+            <div class="layui-input-inline">
+                <select id="gradeId" name="gradeId" lay-verify="studetnRequired" lay-filter="gradeId">
+                    <option value="">请选择年级</option>
+                </select>
+            </div>
         </div>
     </div>
     <div class="layui-form-item text-right">
@@ -63,12 +106,95 @@
 <script type="text/javascript" src="/assets/libs/layui/layui.js"></script>
 <script type="text/javascript" src="/assets/js/common.js"></script>
 <script>
-    layui.use(['layer', 'form', 'formSelects', 'admin'], function () {
+    layui.use(['layer', 'form', 'formSelects', 'admin', 'collegeSelect'], function () {
         var $ = layui.jquery;
         var layer = layui.layer;
         var form = layui.form;
         var formSelects = layui.formSelects;
         var admin = layui.admin;
+        var collegeSelect = layui.collegeSelect;
+
+
+        //自定义校验规则
+        form.verify({
+            studentRequired: function (value, item) { //value：表单的值、item：表单的DOM对象
+                if ($("#roleId option:selected") == '学生') {
+                    value = $.trim(value);
+                    if (value == "") {
+                        return "必输项不能为空";
+                    }
+                }
+            },
+            teacherRequired: function (value, item) { //value：表单的值、item：表单的DOM对象
+                if ($("#roleId option:selected") == '教师' || $("#roleId option:selected") == '学生') {
+                    value = $.trim(value);
+                    if (value == "") {
+                        return "必输项不能为空";
+                    }
+                }
+            }
+        });
+
+        //选择角色触发事件
+        form.on('select(roleId)', function (data) {
+            if ($("#roleId option:selected").val() != "") {
+                if ($("#roleId option:selected").text() == '学生' || $("#roleId option:selected").text() == '教师') {
+                    //加载学院下拉框
+                    collegeSelect.renderCollegeList();
+                    $('#collegeDiv').show();
+                    $('#subjectDiv').show();
+                    if ($("#roleId option:selected").text() == '学生') {
+                        $('#classDiv').show();
+                        $('#gradeDiv').show();
+                    } else {
+                        $('#classDiv').hide();
+                        $('#gradeDiv').hide();
+                    }
+                } else {
+                    $('#collegeDiv').hide();
+                    $('#subjectDiv').hide();
+                    $('#classDiv').hide();
+                    $('#gradeDiv').hide();
+                }
+                form.render('select');
+            }
+        });
+
+        //选择学院触发事件
+        form.on('select(collegeId)', function (data) {
+            if ($("#collegeId option:selected").val() != "") {
+                collegeSelect.renderSubjectList(data.value);
+            } else {
+                $('#subjectId').val('');
+            }
+            $('#classId').val('');
+            $('#gradeId').val('');
+            form.render('select');
+        });
+
+        //选择专业触发事件
+        form.on('select(subjectId)', function (data) {
+            if ($("#subjectId option:selected").val() != "") {
+                if ($("#roleId option:selected").text() == '学生') {
+                    collegeSelect.renderClassList(data.value);
+                }
+            } else {
+                $('#classId').val('');
+            }
+            $('#gradeId').val('');
+            form.render('select');
+        });
+        //选择班级触发事件
+        form.on('select(classId)', function (data) {
+            if (data.value != "") {
+                //加载年级下拉框
+                collegeSelect.renderGradeList();
+            } else {
+                $('#gradeId').val('');
+            }
+            form.render('select');
+        });
+
 
         var url = 'add';
         // 回显user数据
@@ -77,11 +203,33 @@
             $('input[name="username"]').attr('readonly', 'readonly');
             url = 'update';
             form.val('userForm', user);
-            var rds = new Array();
-            for (var i = 0; i < user.roles.length; i++) {
-                rds.push(user.roles[i].roleId);
+            var roles = user.roles;
+            console.info(user)
+            if (roles.length > 0) {
+                $('#roleId').val(roles[0].roleId);
+                if ($("#roleId option:selected").val() != "") {
+                    if ($("#roleId option:selected").text() == '学生' || $("#roleId option:selected").text() == '教师') {
+                        //加载学院下拉框
+                        collegeSelect.renderCollegeList();
+                        $('#collegeDiv').show();
+                        if ($("#roleId option:selected").text() == '学生') {
+                            collegeSelect.reshowAll(user.collegeId, user.subjectId, user.classId, user.gradeId, null, null, false);
+                        } else {
+                            collegeSelect.reshowAll(user.collegeId, user.subjectId, null, null, null, null, false);
+                            $('#classDiv').hide();
+                            $('#gradeDiv').hide();
+                        }
+                    } else {
+                        $('#collegeDiv').hide();
+                        $('#subjectDiv').hide();
+                        $('#classDiv').hide();
+                        $('#gradeDiv').hide();
+                    }
+                    form.render('select');
+                }
             }
-            formSelects.value('roleId', rds);
+            form.render('select');
+
         }
 
         // 表单提交事件
